glx/testdata/valid/citation-quality2.glx
citations:
  citation-23456789:
    source: source-12345678
    quality: 2
    locator: "Page 45, Entry 123"
    transcription: "John Smith, age 25, born 1850"
    data_date: "1875-06-10"
