glx/testdata/invalid/missing-required-fields/citations/citation-123.glx
citations:
  citation-123:
    source: source-123
    locator: "Page 1"


